travis: fix builds
* Fix go-tip compilation
* Use 'glide' instead of 'go get' in installation process
* Go fmt

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,12 @@ matrix:
   allow_failures:
     - go: tip
 
+before_install:
+  - curl https://glide.sh/get | sh
+
+install:
+  - glide install
+
 script:
  - ./test
 
