--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,15 @@ matrix:
     - go: 1.8.x
     - go: 1.9.x
     - go: 1.10.x
+    - go: 1.11.x
+    - go: 1.12.x
     - go: tip
   allow_failures:
     - go: tip
+
+env:
+  global:
+    - GOFMT_VERSION=1.12
 
 before_install:
   - curl https://glide.sh/get | sh
